# -*- coding: utf-8 -*-

2010-02-06  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_commands_specification_command.rb: Don't enforce YAML
	  format.  Patch #27791 by Aaron Patterson.
	* lib/rubygems/version.rb: Allow captial letters in prerelease
	  versions

2010-02-01  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/command*: Add 'gem push' and 'gem owner' for
	  interacting with modern/Gemcutter sources [Nick Quaranto]

2010-01-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_list.rb:  Ignore development dependencies
	  unless explicitly needed.  Bug #27608 by Roger Pack.

2010-01-12  John Barnette <jbarnette@rubygems.org>

	* Rakefile: Don't add development deps when building the
	rubygems-update gem, it borks older versions when they're updating
	from a stub index.

2009-12-22  Evan Phoenix  <evan@fallingsnow.net>

	* lib/rubygems/spec_fetcher.rb: Don't bother re-Marshaling
	the spec YAML list.

2009-11-04  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/timer.rb: Removed. The deprecation sun set in July.

2009-10-14  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/dependency.rb: Burndown/cleanup. Refactored code
	and tests. Gem::Dependency.version_requirement(s) is deprecated in
	favor of Gem::Dependency.requirement.

	* lib/rubygems/requirement.rb: Burndown/cleanup. Refactored code
	and tests. See test/support/shortcuts.rb for some new test helpers.

2009-10-13  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/local_remote_options.rb: Make --source additive,
	not exclusive. If exclusive sources are desired, use
	--clear-sources first.

2009-09-29  John Barnette  <jbarnette@rubyforge.org>

	* lib/rubygems/spec_fetcher.rb: Be slightly more robust when faced
	with corrupted indexes.

2009-09-03  John Barnette  <jbarnette@rubyforge.org>

	* LOTS: Use "raise" consistently, not "fail".

2009-09-01  John Barnette  <jbarnette@rubyforge.org>

	* lib/rubygems/version.rb: Gem::Version immutability